examples/test/testpolicy5733.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5733
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key14: value15
      key15: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value24
      podSelector:
        matchLabels:
          key44: value13
          key10: value38
          key26: value25
